--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -100,6 +100,13 @@
           p {
             line-height: 20px;
           }
+          a {
+            text-decoration: underline;
+            color: #f2e8d6;
+            &:hover {
+              text-decoration: none;
+            }
+          }
         }
         .close_container {
           button.close {
