--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -12,6 +12,11 @@
   padding: 20px 0 40px 0;
   position: relative;
   text-align: center;
+  h4 {
+    color: #000;
+    margin: 40px auto 20px auto;
+    max-width: 600px;
+  }
   .map_wrapper {
     max-width: 600px;
     margin: auto auto;
